# c2-launcher

./: CMakeLists.txt  README.md  config.h.in
Code/CryCommon/: IGameRef.h  IGameStartup.h  ISystem.h
Code/Launcher/DedicatedServer/: Main.cpp
Code/Launcher/Game/: Main.cpp
Resources/: DedicatedServerLauncher.rc  GameLauncher.aps  GameLauncher.rc
